Removed unnecessary annotations and updated a deprecated URL method.